--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ section h2 {
     width: 50px;
     height: 50px;
     border-radius: 100%;
+    margin-bottom: 10px;
     display: inline-block;
     position: relative;
     left: 1px;
@@ -207,4 +208,10 @@ footer {
         -webkit-transform: translateX(0);
         transform: translateX(0);
     }
+}
+
+#snapcode img {
+  display: block;
+    position: relative;
+    margin: 0 auto;
 }
